--- a/DirectoryExample/Views/Shared/_Layout.cshtml
+++ b/DirectoryExample/Views/Shared/_Layout.cshtml
@@ -39,8 +39,8 @@
             <p>Directory - &copy; @DateTime.Now.Year</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/mvcgrid")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
