Added green to css stuff

--- a/DirectoryExample/Content/flatly.bootstrap.css
+++ b/DirectoryExample/Content/flatly.bootstrap.css
@@ -7136,7 +7136,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-    background-color: #2C3E50 !important;
+    background-color: #2c5d43 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
