--- a/DirectoryExample/Content/Gridmvc.css
+++ b/DirectoryExample/Content/Gridmvc.css
@@ -14,7 +14,7 @@ table.grid-table { margin: 0; }
         table.grid-table .grid-header > .grid-header-title { width: 100%; margin-right: 15px; white-space: nowrap; }
 
     /* Grid body */
-    table.grid-table tr.grid-row-selected td { background: #4888C2 !important; color: white; }
+    table.grid-table tr.grid-row-selected td { background: #2c5d43 !important; color: white; }
     table.grid-table tr.grid-row-selected a { color: white; }
 
 /* Grid filtering */
