--- a/DirectoryExample/Views/Shared/_Layout.cshtml
+++ b/DirectoryExample/Views/Shared/_Layout.cshtml
@@ -25,6 +25,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "Products")">Products</a>
                 </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="orderDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Order Info</a>
+                <div class="dropdown-menu" aria-labelledby="orderDropdown">
+                    <a class="dropdown-item" href="@Url.Action("Index", "Orders")">Orders</a>
+                    <a class="dropdown-item" href="#">Details</a>
+                    <a class="dropdown-item" href="#">Shippers</a>
+                </div>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
