--- a/DirectoryExample/Views/Employees/Index.cshtml
+++ b/DirectoryExample/Views/Employees/Index.cshtml
@@ -44,6 +44,8 @@
     <link href="~/Content/Gridmvc.css" rel="stylesheet" />
 </head>
 <body>
+    <a href="@Url.Action("ExportEmployees", "Employees")" title="Export Grid to Excel" class="links">
+       <img alt="Export" src="@Url.Content("~/Content/Images/excel.png")" style="width: 40px; height:40px"/> </a>
     @Html.Grid(Model).Columns(columns =>
 {
 columns.Add().Encoded(false).Sanitized(false).Titled("Details")
