--- a/DirectoryExample/Content/flatly.bootstrap.css
+++ b/DirectoryExample/Content/flatly.bootstrap.css
@@ -3640,7 +3640,7 @@ input[type="button"].btn-block {
     .dropdown-item:hover, .dropdown-item:focus {
         color: #fff;
         text-decoration: none;
-        background-color: #2C3E50;
+        background-color: #2C5D43;
     }
 
     .dropdown-item.active, .dropdown-item:active {
@@ -11538,3 +11538,7 @@ a.text-dark:hover, a.text-dark:focus {
     .modal .close:not(:disabled):not(.disabled):hover, .modal .close:not(:disabled):not(.disabled):focus {
         color: #000;
     }
+
+.navbar-nav li:hover .dropdown-menu {
+    display: block;
+} }
