--- a/DirectoryExample/Views/Shared/_Layout.cshtml
+++ b/DirectoryExample/Views/Shared/_Layout.cshtml
@@ -26,12 +26,12 @@
                     <a class="nav-link" href="@Url.Action("Index", "Products")">Products</a>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="orderDropdown" role="button"
+                <a class="nav-link dropdown-toggle" href="#" id="orderDropdown" 
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Order Info</a>
                 <div class="dropdown-menu" aria-labelledby="orderDropdown">
                     <a class="dropdown-item" href="@Url.Action("Index", "Orders")">Orders</a>
-                    <a class="dropdown-item" href="#">Details</a>
-                    <a class="dropdown-item" href="#">Shippers</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Order_Details_Extended")">Details</a>
+                    <a class="dropdown-item" href="@Url.Action("Index", "Shippers")">Shippers</a>
                 </div>
                 </li>
             </ul>
